photos of places

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,9 +19,10 @@
             <option value="astana">Astana</option>
         </select>
         <button onclick="getPlaces()">Show Places</button>
-
+        
         <h2>Available Places</h2>
-        <ul id="places-list"></ul>
+        <ul id="places-list" style="list-style-type: none; padding: 0;"></ul>
+        
 
         <h2>Reviews of Places</h2>
         <ul id="reviews-list"></ul>
