--- a/public/styles.css
+++ b/public/styles.css
@@ -18,6 +18,22 @@ body {
     align-items: center;
     padding: 0;
 }
+#places-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px;
+    padding: 20px 0;
+}
+
+#places-list li {
+    list-style: none;
+    transition: transform 0.3s;
+}
+
+#places-list li:hover {
+    transform: scale(1.05);
+}
 
 
 
