Selection of places

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,12 +23,12 @@
         <h2>Available Places</h2>
         <ul id="places-list" style="list-style-type: none; padding: 0;"></ul>
         
-
-        <h2>Reviews of Places</h2>
-        <ul id="reviews-list"></ul>
+        
 
         <h2>Nearby Hotels</h2>
         <ul id="hotels-list"></ul>
+
+        <button id="save-places-btn">Save Selected Places</button>
     </div>
 
     <script src="/script.js"></script>
