--- a/public/styles.css
+++ b/public/styles.css
@@ -25,14 +25,14 @@ body {
     gap: 15px;
     padding: 20px 0;
 }
-
 #places-list li {
     list-style: none;
-    transition: transform 0.3s;
+    transition: transform 0.3s, background-color 0.3s;
 }
 
 #places-list li:hover {
     transform: scale(1.05);
+    background-color: #d0eaff;
 }
 
 
