--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,9 @@
         
         <h2>Available Places</h2>
         <ul id="places-list" style="list-style-type: none; padding: 0;"></ul>
-        
+        <!-- Add a new button for finding hotels -->
+        <button onclick="getHotels()">Show Hotels</button>
+
         <h2>Nearby Hotels</h2>
         <ul id="hotels-list"></ul>
 
@@ -30,5 +32,6 @@
     </div>
 
     <script src="/script.js"></script>
+   
 </body>
 </html>
