--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,15 +20,16 @@
         </select>
         <button onclick="getPlaces()">Show Places</button>
         
+        
         <h2>Available Places</h2>
-        <ul id="places-list" style="list-style-type: none; padding: 0;"></ul>
+        <ul id="places-list"></ul>
         <!-- Add a new button for finding hotels -->
+        <button id="save-places-btn">Save Selected Places</button>
+
         <button onclick="getHotels()">Show Hotels</button>
 
         <h2>Nearby Hotels</h2>
         <ul id="hotels-list"></ul>
-
-        <button id="save-places-btn">Save Selected Places</button>
     </div>
 
     <script src="/script.js"></script>
