--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,8 @@
         <button onclick="getHotels()">Show Hotels</button>
 
         <h2>Nearby Hotels</h2>
-        <ul id="hotels-list"></ul>
+        <ul id="hotels-list"></ul>  
+        <button id="save-hotel-btn">Save Selected Hotel</button>
     </div>
 
     <script src="/script.js"></script>
