--- a/public/styles.css
+++ b/public/styles.css
@@ -232,6 +232,70 @@ li:hover {
     transform: scale(1.02);
 }
 
+#saved-places-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Three columns */
+    gap: 15px; /* Space between items */
+    padding: 20px 0;
+}
+
+#saved-places-list li {
+    list-style: none;
+    background-color: #ffffff; /* Белый фон */
+    padding: 25px; /* Увеличенный отступ для большего фона */
+    border-radius: 12px; /* Скругленные углы */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); /* Увеличенная тень для глубины */
+    text-align: center;
+    transition: transform 0.3s, background-color 0.3s;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 330px; /* Максимальная ширина для каждого элемента */
+    height: 100%;
+}
+
+#saved-places-list img {
+    width: 100%;
+    height: 200px; /* Высота изображений фиксированная */
+    border-radius: 8px; /* Скругленные углы для изображений */
+    object-fit: cover;
+}
+
+#saved-places-list .place-name {
+    font-size: 20px; /* Размер шрифта увеличен */
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+#saved-places-list .rating {
+    color: #ffd700; /* Золотой цвет для звезд */
+    font-size: 18px;
+    margin-top: 5px;
+}
+
+#project-description {
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    font-family: Arial, sans-serif;
+}
+
+#project-description h2 {
+    color: #333;
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+#project-description p {
+    font-size: 18px;
+    line-height: 1.6;
+    color: #555;
+    text-align: justify;
+}
+
 
 /*NEW CSS*/
 
