add place and hotel collections

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,8 +37,8 @@
         
         <h2>Select a City</h2>
         <select id="city-select">
-            <option value="almaty">Almaty</option>
-            <option value="astana">Astana</option>
+            <option value="Almaty">Almaty</option>
+            <option value="Astana">Astana</option>
         </select>
         <button onclick="getPlaces()">Show Places</button>
         
