Add comment and comment.css

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
         <header>
             <h1>Welcome, <%= user.username %>!</h1>
             <a href="/logout" class="logout-btn">Log Out</a>
+            <a href="/comments-page">Go to Comments</a>
         </header>
         
         <section id="project-description">
