--- a/views/comments.ejs
+++ b/views/comments.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Your Comments</h1>
+    <h1>Give feadback to travel app</h1>
 
     <form id="create-comment-form">
         <textarea id="comment-text" required></textarea>
